--- a/cookiewebstise.html
+++ b/cookiewebstise.html
@@ -5,67 +5,89 @@
  	</head>
 
  	<body>
- 		<h1>The Best Chocolate Chip Cookie11111s</h1>
- 		<img src="https://images-gmi-pmc.edge-generalmills.com/a5e741a2-4a7b-4138-89f4-6c781a28c2ff.jpg">
- 		<h2><strong>Recipe by: Bonnie Owens</strong></h2>
 
- 		<h2><strong>RELATED RECIPES</strong></h2>
- 			<ul>
- 				<li>Amazing Chocolate Chip Cookies!</li>
-				<li>Beer and Pretzel Chocolate Chip Cookies</li>
-				<li>Bisquick® Chocolate Chip Cookies</li>
-				<li>Browned Butter and Coconut Chocolate Chip Cookies</li>
-				<li>Buttery Chocolate Chip Cookies</li>
-				<li>Cherry Chocolate Chip Cookies</li>
-			</ul>
+ 		<header>
+	 		<h1>The Best Chocolate Chip Cookie11111s</h1>
+	 		<img src="https://images-gmi-pmc.edge-generalmills.com/a5e741a2-4a7b-4138-89f4-6c781a28c2ff.jpg">
+	 		<h2><strong>Recipe by: Bonnie Owens</strong></h2>
+	 	</header>
 
-		<h2><strong>PREP TIME</strong></h2>
-			<p>45 min</p>
+	 	<aside>
+	 		<h1><strong>RELATED RECIPES</strong></h1>
+	 			<ul>
+	 				<li>Amazing Chocolate Chip Cookies!</li>
+					<li>Beer and Pretzel Chocolate Chip Cookies</li>
+					<li>Bisquick® Chocolate Chip Cookies</li>
+					<li>Browned Butter and Coconut Chocolate Chip Cookies</li>
+					<li>Buttery Chocolate Chip Cookies</li>
+					<li>Cherry Chocolate Chip Cookies</li>
+				</ul>
+		</aside>
 
-		<h2><strong>TOTAL TIME</strong></h2>
-			<p>45 min</p>
+		<section>
+			<article>
+			<h1><strong>PREP TIME</strong></h1>
+				<p>45 min</p>
+			</article>
 
-		<h2><strong>SERVING</strong></h2>
-			<p>A lot</p>
+			<article>
+			<h1><strong>TOTAL TIME</strong></h1>
+				<p>45 min</p>
+			</article>
 
-		<h2><strong>INGREDIENTS</strong></h2>
-			<ul>
-				<li>1 1/2 cup (3 sticks) butter, softened</li>
-				<li>1 cup brown sugar</li>
-				<li>1 cup granulated sugar</li>
-				<li>1 Tbl vanilla instant pudding powder</li>
-				<li>2 Tbl milk</li>
-				<li>2 Tbl vanilla extract</li>
-				<li>2 eggs</li>
-				<li>4 cups all purpose flour</li>
-				<li>2 tsp baking soda</li>
-				<li>1/2 tsp salt</li>
-				<li>4 cups chocolate chips</li>
-				<li>1 cup chopped walnuts or pecans(optional)</li>
-				<li>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</li>
-			</ul>
+			<article>
+			<h1><strong>SERVING</strong></h1>
+				<p>A lot</p>
+			</article>
 
-		<h2><strong>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</strong></h2>
-			<ul>
-				<li>Preheat oven to 350 degrees</li>
-				<li>Beat butter and sugars together until light and fluffy</li>
-				<li>Stir in pudding mix milk and vanilla extract.</li>
-				<li>Beat in eggs.</li>
-				<li>Add dry ingredients and stir until combined.</li>
-				<li>Stir in chocolate chips and nuts.</li>
-				<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
-				<li>Bake 8-10 minutes or until golden brown.</li>
-			</ul>
+			<article>
+			<h1><strong>INGREDIENTS</strong></h1>
+			
+				<ul>
+					<li>1 1/2 cup (3 sticks) butter, softened</li>
+					<li>1 cup brown sugar</li>
+					<li>1 cup granulated sugar</li>
+					<li>1 Tbl vanilla instant pudding powder</li>
+					<li>2 Tbl milk</li>
+					<li>2 Tbl vanilla extract</li>
+					<li>2 eggs</li>
+					<li>4 cups all purpose flour</li>
+					<li>2 tsp baking soda</li>
+					<li>1/2 tsp salt</li>
+					<li>4 cups chocolate chips</li>
+					<li>1 cup chopped walnuts or pecans(optional)</li>
+					<li>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</li>
+				</ul>
+			</article>
 
-		<h2><strong>EXPERT TIPS</strong></h2>
-			<p>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!</p>
-			<p>Got questions? Our experts have the answers. <a href="mailto:fraciscocid97@hotmail.com"> Email me </a></p>
+			<article>
+			<h1><strong>How to make Mama’s Recipe: The Best Chocolate Chip Cookies</strong></h1>
+				<ul>
+					<li>Preheat oven to 350 degrees</li>
+					<li>Beat butter and sugars together until light and fluffy</li>
+					<li>Stir in pudding mix milk and vanilla extract.</li>
+					<li>Beat in eggs.</li>
+					<li>Add dry ingredients and stir until combined.</li>
+					<li>Stir in chocolate chips and nuts.</li>
+					<li>Place 1 1/2 inch balls of dough 2 inches apart on an un greased cookie sheet.</li>
+					<li>Bake 8-10 minutes or until golden brown.</li>
+				</ul>
+			</article>
 
-		<h2><strong>NUTRITION INFORMATION</strong></h2>
-			<p>
-				Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
+			<article>
+			<h1><strong>EXPERT TIPS</strong></h1>
+				<p>Use an ice-cream scoop to make perfectly shaped cookies. Level off the dough on the edge of the bowl for perfectly round cookies. If you didn't think these cookies could get any better, think again! Get creative use with 1/2 cup each of semisweet chocolate chips, peanut butter chips or butterscotch chips instead of the 2 cups semisweet chocolate chips. OMG these are good!</p>
+				<p>Got questions? Our experts have the answers. <a href="mailto:fraciscocid97@hotmail.com"> Email me </a></p>
+			</article>
 
-				This recipe was altered from Open Source Recipe for more recipes go here.</p>
+			<article>
+			<h1><strong>NUTRITION INFORMATION</strong></h1>
+				<p>
+					Probably bad for you, but who cares. MMMMMM COOKIES!!!! nom nom nom
+
+					This recipe was altered from Open Source Recipe for more recipes go here.</p>
+			</article>
+
 
 
 
